@startuml

title __CONTROLLERS's Class Diagram__\n


      namespace controllers {
        class com.example.countires.controllers.ResultWindowController {
            + deleteButton : Button
            + nameColumn : TableColumn<Result, String>
            + restartButton : Button
            + resultColumn : TableColumn<Result, String>
            + resultsTable : TableView<Result>
            - connection : Connection
            - results : List<Result>
            + ResultWindowController()
            + deleteResult()
            + restartTest()
            - initialize()
        }
      }



      namespace controllers {
        class com.example.countires.controllers.TestWindowController {
            + checkedLabel : Label
            - answerTextField : TextField
            - checkButton : Button
            - connection : Connection
            - currentQuestionIndex : int
            - nextButton : Button
            - questionLabel : Label
            - questions : List<Question>
            + TestWindowController()
            - initialize()
            - onCheckButtonClicked()
            - onNextButtonClicked()
            - showCurrentQuestion()
        }
      }

  

  com.example.countires.controllers.ResultWindowController o-- com.example.countires.h2database.CountryDao : countryDao
  com.example.countires.controllers.TestWindowController o-- com.example.countires.h2database.CountryDao : countryDao
  com.example.countires.controllers.TestWindowController o-- com.example.countires.domain.Quiz : quiz


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
